--- a/core/test/config/application.properties
+++ b/core/test/config/application.properties
@@ -2,9 +2,9 @@
 logging.config=classpath:logback.xml
 logging.path=/Users/limaofeng/framework/core/build/logs
 # datasource config
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST}:3306/core?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/core?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.redis.host=localhost
 spring.redis.password=
@@ -22,21 +22,7 @@ spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 spring.jpa.properties.hibernate.ejb.identifier_generator_strategy_provider=org.jfantasy.framework.dao.hibernate.spi.CustomIdentifierGeneratorStrategyProvider
 
-#spring.jpa.properties.hibernate.ejb.event.post-insert=org.jfantasy.framework.lucene.dao.hibernate.EntityChangedEventListener
-#spring.jpa.properties.hibernate.ejb.event.post-update=org.jfantasy.framework.lucene.dao.hibernate.EntityChangedEventListener
-#spring.jpa.properties.hibernate.ejb.event.post-delete=org.jfantasy.framework.lucene.dao.hibernate.EntityChangedEventListener
 
 spring.jpa.generate-ddl=true
 
 spring.thymeleaf.cache=false
-
-# swagger config
-springfox.documentation.swagger.v2.path=/api-docs
-springfox.documentation.swagger.api.title=JFantasy RESTful API
-springfox.documentation.swagger.api.description=JFantasy RESTful API \u6587\u6863
-springfox.documentation.swagger.api.version=1.0.5
-springfox.documentation.swagger.api.termsOfServiceUrl=http://service.jfantasy.org
-springfox.documentation.swagger.api.contact.name=\u674E\u8302\u5CF0
-springfox.documentation.swagger.api.contact.email=limaofeng@msn.com
-springfox.documentation.swagger.api.licence=MIT
-springfox.documentation.swagger.api.licenseUrl=#
