--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -19,4 +19,5 @@ dependencies {
     compile project(":jfantasy-core")
     testCompile 'junit:junit:4.12'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testCompile libs['test']
 }
