--- a/demo/resources/application.yml
+++ b/demo/resources/application.yml
@@ -12,14 +12,10 @@ spring:
     name: datasource
     url: jdbc:mysql://127.0.0.1:3306/cms?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
     username: root
-    password:
-  redis:
-    host: 127.0.0.1
-    password:
-    port: 6379
+    password: yV2jJxvNs8BD
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
       use-new-id-generator-mappings: true
       naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
     properties:
