使用 zbsg.com.cn 的域名

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 
 build:
   stage: build
-  image: docker.oss.homeword.cn/limaofeng/gradle-alpine
+  image: docker.artifactory.zbsg.com.cn/limaofeng/gradle-alpine
   cache:
     paths:
     - $GRADLE_USER_HOME/caches/
@@ -39,7 +39,7 @@ build:
 
 deploy:
   stage: deploy
-  image: docker.oss.homeword.cn/limaofeng/gradle-alpine
+  image: docker.artifactory.zbsg.com.cn/limaofeng/gradle-alpine
   cache:
     paths:
     - $GRADLE_USER_HOME/caches/
