--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,21 @@ build:
       - .gradle/wrapper/
   before_script:
     - export GRADLE_USER_HOME=$PWD/.gradle
+    # Install JFrog CLI
+    - curl -fL https://getcli.jfrog.io | sh
+    # Configure Artifactory instance with JFrog CLI
+    - ./jfrog rt config --url=$ARTIFACTORY_URL --user=$ARTIFACTORY_USER --password=$ARTIFACTORY_PASS
+    - ./jfrog rt c show
+    # Replace the repository name in the configuration.yml to the correct one.
+    - sed -i 's,GRADLE_REPO_KEY,'"$GRADLE_REPO_KEY"',g' configuration.yaml
   script:
-    - ./gradlew clean classes -x test
+    # - ./gradlew clean classes -x test
+    # Run the Gradle command
+    - ./jfrog rt ./gradlew "clean classes -x test" configuration.yaml --build-name=gitlabci-gradle-artifactory --build-number=$CI_JOB_ID
+    # Collect the environment variables
+    - ./jfrog rt bce gitlabci-gradle-artifactory $CI_JOB_ID
+    # Pass the build information to Artifactory
+    - ./jfrog rt bp gitlabci-gradle-artifactory $CI_JOB_ID
 
 #sonar:
 #  stage: test
