--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ allprojects {
     apply plugin: 'maven'
 
     group = 'org.jfantasy'
-    version = System.getenv()['CI_BUILD_TAG'] // Gitlab 集成时, 使用 Tag 作为版本号
-
+    version = '1.0' // System.getenv()['CI_BUILD_TAG'] // Gitlab 集成时, 使用 Tag 作为版本号
+    status = 'integration'
 }
 
 subprojects {
