--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,32 +1,19 @@
 stages:
-  - build
-  - test
-  - deploy
+- build
+- test
+- deploy
 
 build:
   stage: build
-  image: docker.artifactory.zbsg.com.cn/frekele/gradle
+  image: docker.artifactory.zbsg.com.cn/java:8
   cache:
     paths:
-      - .gradle/caches/
-      - .gradle/wrapper/
+    - .gradle/caches/
+    - .gradle/wrapper/
   before_script:
-    - export GRADLE_USER_HOME=$PWD/.gradle
-    # Install JFrog CLI
-    - curl -fL https://getcli.jfrog.io | sh
-    # Configure Artifactory instance with JFrog CLI
-    - ./jfrog rt config --url=$ARTIFACTORY_URL --user=$ARTIFACTORY_USER --password=$ARTIFACTORY_PASS
-    - ./jfrog rt c show
-    # Replace the repository name in the configuration.yml to the correct one.
-    - sed -i 's,GRADLE_REPO_KEY,'"$GRADLE_REPO_KEY"',g' configuration.yaml
+  - export GRADLE_USER_HOME=$PWD/.gradle
   script:
-    # - ./gradlew clean classes -x test
-    # Run the Gradle command
-    - ./jfrog rt gradle "clean artifactoryPublish -b build.gradle" configuration.yaml --build-name=gitlabci-gradle-artifactory --build-number=$CI_JOB_ID
-    # Collect the environment variables
-    - ./jfrog rt bce gitlabci-gradle-artifactory $CI_JOB_ID
-    # Pass the build information to Artifactory
-    - ./jfrog rt bp gitlabci-gradle-artifactory $CI_JOB_ID
+  - ./gradlew clean classes -x test
 
 #sonar:
 #  stage: test
@@ -51,15 +38,14 @@ build:
 
 deploy:
   stage: deploy
-  image: docker.artifactory.zbsg.com.cn/limaofeng/gradle-alpine
+  image: docker.artifactory.zbsg.com.cn/java:8
   cache:
     paths:
-    - $GRADLE_USER_HOME/caches/
-    - $GRADLE_USER_HOME/wrapper/
-    - $GRADLE_USER_HOME/build-cache/
-  variables:
-    GRADLE_USER_HOME: /cache/.gradle
-  only:
-    - tags
+    - .gradle/caches/
+    - .gradle/wrapper/
+  before_script:
+  - export GRADLE_USER_HOME=$PWD/.gradle
   script:
-    - gradle clean testClasses upload -x test
+  - ./gradlew artifactoryPublish
+  only:
+  - tags
