--- a/build.gradle
+++ b/build.gradle
@@ -136,5 +136,5 @@ artifactory {
             publishIvy = false
         }
     }
-    clientConfig.info.setBuildNumber($CI_JOB_ID)
+    clientConfig.info.setBuildNumber(System.getenv()['CI_JOB_ID'])
 }
