--- a/build.gradle
+++ b/build.gradle
@@ -7,16 +7,13 @@ buildscript {
     dependencies {
         classpath 'io.spring.gradle:dependency-management-plugin:1.0.0.RELEASE'
         classpath 'io.spring.gradle:propdeps-plugin:0.0.9.RELEASE'
-        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5'
+        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7'
         classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.+'
     }
 }
 
-plugins {
-    id "org.sonarqube" version "2.5"
-}
-
 apply from: "$rootDir/gradle/dependencies.gradle"
+apply plugin: "org.sonarqube"
 
 configure(allprojects) {
     apply plugin: 'propdeps'
@@ -94,7 +91,7 @@ subprojects {
     sonarqube {
         properties {
             property "sonar.sourceEncoding", "UTF-8"
-            property "sonar.links.ci", "http://gitlab.zbsg.com.cn/ci"
+            property "sonar.links.ci", "http://gitlab.zbsg.com.cn"
             property "sonar.links.issue", "http://gitlab.zbsg.com.cn/apis/framework/issues"
             property "sonar.links.scm", "http://gitlab.zbsg.com.cn/apis/framework.git"
         }
