--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,10 @@ sonarqube:
   - export GRADLE_USER_HOME=$PWD/.gradle
   script:
   - mysql -h mysql -u root -p123456 < "core/database/tables.sql"
-  - ./gradlew sonarqube -Dsonar.host.url=$SONAR_HOST -Dsonar.login=$SONAR_TOKEN -Dsonar.scm.provider=git -Dsonar.analysis.mode=publish -Dsonar.issuesReport.console.enable=true -Dsonar.verbose=true
+  - ./gradlew sonarqube -Dsonar.host.url=$SONAR_HOST \
+    -Dsonar.login=$SONAR_TOKEN -Dsonar.scm.provider=git \
+    -Dsonar.analysis.mode=publish -Dsonar.issuesReport.console.enable=true \
+    -Dsonar.verbose=true
   cache:
     paths:
     - .gradle/caches/
