--- a/core/build.gradle
+++ b/core/build.gradle
@@ -21,8 +21,8 @@ dependencies {
     compile libs['commons']
     // asm and cglib
     compile libs['third-party']
-
-    compile 'org.projectlombok:lombok:1.18.4'
-
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.8'
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
     testCompile libs['test']
 }
