--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ allprojects {
     apply plugin: 'idea'
 
     group = 'org.jfantasy'
-    version = System.getenv()['CI_BUILD_TAG']
+    version = (System.getenv()['CI_BUILD_TAG'] ? System.getenv()['CI_BUILD_TAG'] : "").replaceAll(/^v/, "")
     status = 'integration'
 
     repositories {
@@ -40,6 +40,7 @@ allprojects {
         apply plugin: 'io.spring.dependency-management'
 
     }
+    
 }
 
 subprojects {
