--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath 'io.spring.gradle:dependency-management-plugin:1.0.0.RELEASE'
+        classpath 'io.spring.gradle:dependency-management-plugin:1.0.7.RELEASE'
         classpath 'io.spring.gradle:propdeps-plugin:0.0.9.RELEASE'
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7'
         classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.+'
@@ -40,6 +40,16 @@ allprojects {
         apply plugin: 'io.spring.dependency-management'
 
     }
+
+    idea {
+        module {
+            outputDir file("$buildDir/classes/java/main")
+            testOutputDir file("$buildDir/classes/java/test")
+            inheritOutputDirs = false
+        }
+    }
+
+    buildDir = 'build'
     
 }
 
