--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,5 +1,4 @@
 ext {
-    springBootVersion = "2.1.1.RELEASE"
     luceneVersion = "3.6.2"
     quartzVersion = '2.2.3'
     groovy = "2.4.7"
@@ -37,14 +36,15 @@ ext {
                     "mysql:mysql-connector-java"
             ],
             commons           : [
-                    "commons-lang:commons-lang:2.6",
+                    'org.apache.commons:commons-text:1.6',
                     "commons-net:commons-net:3.3",
                     "commons-beanutils:commons-beanutils:1.9.2",
                     "org.apache.ant:ant:1.9.5",
-                    "com.github.jknack:handlebars:4.0.6",
+                    "com.github.jknack:handlebars:4.1.2",
                     "commons-io:commons-io:2.5",
                     "org.apache.commons:commons-email:1.3.2",
                     "commons-fileupload:commons-fileupload:1.2.2",
+                    'org.apache.commons:commons-lang3:3.7'
             ],
             'third-party'     : [
                     "org.projectlombok:lombok:1.18.2",
