--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,22 +1,17 @@
 ext {
     luceneVersion = "3.6.2"
-    quartzVersion = '2.2.3'
     groovy = "2.4.7"
 
     libs = [
-            lucene     : [
+            lucene       : [
                     "org.apache.lucene:lucene-core:${luceneVersion}",
                     "org.apache.lucene:lucene-highlighter:${luceneVersion}",
                     "org.apache.lucene:lucene-queryparser:${luceneVersion}"
             ],
-            unirest    : [
+            unirest      : [
                     "com.mashape.unirest:unirest-java:1.4.9"
             ],
-            quartz     : [
-                    "org.quartz-scheduler:quartz:${quartzVersion}",
-                    "org.quartz-scheduler:quartz-jobs:${quartzVersion}"
-            ],
-            spring            : [
+            spring       : [
                     "org.springframework:spring-core",
                     "org.springframework:spring-web",
                     "org.springframework:spring-webmvc",
@@ -25,17 +20,18 @@ ext {
                     "org.springframework:spring-context-support"
 
             ],
-            springBoot        : [
+            springBoot   : [
                     "org.springframework.boot:spring-boot-starter-web",
+                    "org.springframework.boot:spring-boot-starter-quartz",
                     "org.springframework.boot:spring-boot-starter-data-jpa",
                     "org.springframework.boot:spring-boot-starter-actuator"
             ],
-            orm : [
+            orm          : [
                     "com.alibaba:druid-spring-boot-starter:1.1.10",
                     "org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.0",
                     "mysql:mysql-connector-java"
             ],
-            commons           : [
+            commons      : [
                     'org.apache.commons:commons-text:1.6',
                     "commons-net:commons-net:3.3",
                     "commons-beanutils:commons-beanutils:1.9.2",
@@ -46,23 +42,23 @@ ext {
                     "commons-fileupload:commons-fileupload:1.2.2",
                     'org.apache.commons:commons-lang3:3.7'
             ],
-            'third-party'     : [
+            'third-party': [
                     "org.projectlombok:lombok:1.18.2",
                     "asm:asm-util:3.3.1",
                     "asm:asm-commons:3.3.1",
                     "cglib:cglib:2.2.2",
                     "net.sourceforge.htmlcleaner:htmlcleaner:2.8",
                     "org.apache.httpcomponents:httpmime:4.3.5",
-                    dependencies.create("eu.medsea.mimeutil:mime-util:2.1.3"){
+                    dependencies.create("eu.medsea.mimeutil:mime-util:2.1.3") {
                         exclude group: "org.slf4j", module: "slf4j-log4j12"
                     },
-                    dependencies.create("ognl:ognl:3.1.2"){
+                    dependencies.create("ognl:ognl:3.1.2") {
                         exclude group: "javassist", module: "javassist"
                     },
                     "org.bouncycastle:bcprov-jdk16:1.46",
                     "com.github.stuxuhai:jpinyin:1.1.8"
             ],
-            test              : [
+            test         : [
                     "org.springframework.boot:spring-boot-starter-test",
                     "junit:junit",
                     "org.codehaus.groovy:groovy-all:${groovy}",
