--- a/graphql/build.gradle
+++ b/graphql/build.gradle
@@ -6,10 +6,8 @@ configurations {
 
 dependencies {
     compile project(":jfantasy-core")
-    compile 'com.graphql-java:graphql-java:12.0'
-    compile 'com.graphql-java:graphql-java-spring-boot-starter-webmvc:1.0'
-    compile 'com.google.guava:guava:26.0-jre'
-    compile 'com.graphql-java:graphql-java-tools:5.2.4'
+    compile 'com.graphql-java:graphql-java-extended-scalars:1.0'
+    compile 'com.graphql-java-kickstart:graphql-spring-boot-starter:5.7.3'
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
     testCompile libs['test']
