--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,4 @@ include ':jfantasy-core', ":jfantasy-storage", ":jfantasy-graphql"
 
 project(':jfantasy-core').projectDir = "$rootDir/core" as File
 project(':jfantasy-storage').projectDir = "$rootDir/storage" as File
-//project(':jfantasy-graphql').projectDir = "$rootDir/graphql" as File
+project(':jfantasy-graphql').projectDir = "$rootDir/graphql" as File
