尝试解决打包错误

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -15,6 +15,8 @@ jar {
     }
 }
 
+artifactoryPublish.skip = true
+
 dependencies {
     compile project(":jfantasy-core")
     compile project(":jfantasy-graphql")
