--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,10 @@ SOURCE_COMPATIBILITY = 1.8
 TARGET_COMPATIBILITY = 1.8
 
 ###
-
+LIB_GRAPHQL_SCALARS_VER = 1.1.0
+LIB_MAPSTRUCT_VER = 1.3.0.Final
+LIB_LOMBOK_VER = 1.18.8
+LIB_GRAPHQL_VER = 6.0.1
 LIB_JUNIT_VER = 4.12
 LIB_SPRING_CORE_VER = 5.2.3.RELEASE
 LIB_SPRING_BOOT_VER = 2.2.4.RELEASE
