--- a/graphql/build.gradle
+++ b/graphql/build.gradle
@@ -6,9 +6,9 @@ configurations {
 
 dependencies {
     compile project(":jfantasy-core")
-    compile 'com.graphql-java:graphql-java-extended-scalars:1.1.0'
-    compile 'com.graphql-java-kickstart:graphql-spring-boot-starter:6.0.1'
-    compileOnly 'org.projectlombok:lombok:1.18.6'
-    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    compile "com.graphql-java:graphql-java-extended-scalars:${LIB_GRAPHQL_SCALARS_VER}"
+    compile "com.graphql-java-kickstart:graphql-spring-boot-starter:${LIB_GRAPHQL_VER}"
+    compileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+    annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
     testCompile libs['test']
 }
