--- a/storage/build.gradle
+++ b/storage/build.gradle
@@ -7,7 +7,7 @@ configurations {
 dependencies {
     compile project(":jfantasy-core")
     compile project(":jfantasy-graphql")
-    compileOnly 'org.projectlombok:lombok:1.18.6'
-    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    compileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+    annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
     testCompile libs['test']
 }
