--- a/example/build.gradle
+++ b/example/build.gradle
@@ -2,9 +2,10 @@ buildscript {
     repositories {
         maven { url "https://artifactory.thuni-h.com/artifactory/libs-release" }
     }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:$LIB_SPRING_BOOT_VER")
-    }
+}
+
+plugins {
+    id "org.springframework.boot" version "${LIB_SPRING_BOOT_VER}"
 }
 
 apply plugin: 'org.springframework.boot'
@@ -20,12 +21,13 @@ artifactoryPublish.skip = true
 dependencies {
     compile project(":jfantasy-core")
     compile project(":jfantasy-graphql")
-    compile 'org.mapstruct:mapstruct:1.3.0.Final'
-    testCompile "junit:junit:$LIB_JUNIT_VER"
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
-    compileOnly 'org.projectlombok:lombok:1.18.6'
-    annotationProcessor 'org.projectlombok:lombok:1.18.8'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.0.Final'
-    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
-    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.0.Final'
+    compile "org.mapstruct:mapstruct:${LIB_MAPSTRUCT_VER}"
+    compileOnly "org.projectlombok:lombok:$LIB_LOMBOK_VER"
+    annotationProcessor "org.projectlombok:lombok:$LIB_LOMBOK_VER"
+    annotationProcessor "org.mapstruct:mapstruct-processor:$LIB_MAPSTRUCT_VER"
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${LIB_SPRING_BOOT_VER}"
+    testCompile "com.graphql-java-kickstart:graphql-spring-boot-starter-test:$LIB_GRAPHQL_VER"
+    testCompileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+    testAnnotationProcessor "org.projectlombok:lombok:$LIB_LOMBOK_VER"
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:$LIB_MAPSTRUCT_VER"
 }
