--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,55 @@ org.gradle.jvmargs = -Xmx4096m -XX:MaxPermSize=4096m -XX:+HeapDumpOnOutOfMemoryE
 SOURCE_COMPATIBILITY = 1.8
 TARGET_COMPATIBILITY = 1.8
 
+kotlin_version=1.3.10
+
 ###
-LIB_GRAPHQL_SCALARS_VER = 1.1.0
+PLUGIN_PROTOBUF_VER = 0.8.12
+PLUGIN_SONARQUBE_VER = 2.7.1
+PLUGIN_ARTIFACTORY_VER = 4.9.8
+PLUGIN_JREBEL_VER = 1.1.8
+PLUGIN_SPRING_DEPENDENCY_MANAGEMENT_VER = 1.0.8.RELEASE
+
+### orm
+LIB_SPRING_DRUID_VER = 1.1.21
+LIB_SPRING_MYBATIS_VER = 2.1.1
+
+### commons
+LIB_APACHE_COMMONS_TEXT_VER = 1.6
+LIB_APACHE_COMMONS_NET_VER = 3.3
+LIB_COMMONS_BEANUTILS_VER = 1.9.2
+LIB_HANDLEBARS_VER = 4.1.2
+LIB_COMMONS_IO_VER = 2.5
+LIB_APACHE_COMMONS_EMAIL_VER = 1.3.2
+LIB_COMMONS_FILEUPLOAD_VER = 1.2.2
+LIB_APACHE_COMMONS_LANG3_VER = 3.7
+
+###
+LIB_CGLIB_VER = 3.3.0
+LIB_HTMLCLEANER_VER = 2.8
+LIB_BCPROV_VER = 1.46
+LIB_OGNL_VER = 3.1.2
+LIB_JPINYIN_VER = 1.1.8
+LIB_MIME_UTIL_VER = 2.1.3
+LIB_UNIREST_VER = 1.4.9
+
+###
+LIB_ELASTICSEARCH_VER = 6.5.4
+
+###
+LIB_GRPC_VER = 1.23.0
+LIB_GRPC_SERVER_VER = 2.5.1.RELEASE
+LIB_PROTOBUF_VER = 3.8.0
 LIB_MAPSTRUCT_VER = 1.3.0.Final
 LIB_LOMBOK_VER = 1.18.8
+LIB_GRAPHQL_SCALARS_VER = 1.1.0
+LIB_GRAPHQL_JAVA_VER = 14.0
 LIB_GRAPHQL_VER = 6.0.1
+LIB_GRAPHQL_SERVLET_VER = 9.0.1
+LIB_JFAN_VER = 0.5.0
 LIB_JUNIT_VER = 4.12
 LIB_SPRING_CORE_VER = 5.2.3.RELEASE
 LIB_SPRING_BOOT_VER = 2.2.4.RELEASE
+
+### test
+LIB_GROOVY_VER = 2.4.7
