--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,75 +1,52 @@
 ext {
-    springBootVersion = "2.2.5.RELEASE"
-    kotlinVersion = "1.3.10"
-    luceneVersion = "3.6.2"
-    groovy = "2.4.7"
 
     libs = [
-            lucene       : [
-                    "org.apache.lucene:lucene-core:${luceneVersion}",
-                    "org.apache.lucene:lucene-highlighter:${luceneVersion}",
-                    "org.apache.lucene:lucene-queryparser:${luceneVersion}"
-            ],
             unirest      : [
-                    "com.mashape.unirest:unirest-java:1.4.9"
-            ],
-            spring       : [
-                    "org.springframework:spring-core",
-                    "org.springframework:spring-web",
-                    "org.springframework:spring-webmvc",
-                    "org.springframework:spring-orm",
-                    "org.springframework:spring-test",
-                    "org.springframework:spring-context-support"
-
+                    "com.mashape.unirest:unirest-java:${LIB_UNIREST_VER}"
             ],
             springBoot   : [
+                    "org.springframework:spring-test",
                     "org.springframework.boot:spring-boot-starter-web",
                     "org.springframework.boot:spring-boot-starter-quartz",
                     "org.springframework.boot:spring-boot-starter-data-jpa",
                     "org.springframework.boot:spring-boot-starter-actuator"
             ],
             orm          : [
-                    "com.alibaba:druid-spring-boot-starter:1.1.21",
-                    'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1',
+                    "com.alibaba:druid-spring-boot-starter:${LIB_SPRING_DRUID_VER}",
+                    "org.mybatis.spring.boot:mybatis-spring-boot-starter:${LIB_SPRING_MYBATIS_VER}",
                     "mysql:mysql-connector-java"
             ],
             commons      : [
-                    'org.apache.commons:commons-text:1.6',
-                    "commons-net:commons-net:3.3",
-                    "commons-beanutils:commons-beanutils:1.9.2",
-                    "org.apache.ant:ant:1.9.5",
-                    "com.github.jknack:handlebars:4.1.2",
-                    "commons-io:commons-io:2.5",
-                    "org.apache.commons:commons-email:1.3.2",
-                    "commons-fileupload:commons-fileupload:1.2.2",
-                    'org.apache.commons:commons-lang3:3.7'
+                    "org.apache.commons:commons-text:${LIB_APACHE_COMMONS_TEXT_VER}",
+                    "commons-net:commons-net:${LIB_APACHE_COMMONS_NET_VER}",
+                    "commons-beanutils:commons-beanutils:${LIB_COMMONS_BEANUTILS_VER}",
+                    "com.github.jknack:handlebars:${LIB_HANDLEBARS_VER}",
+                    "commons-io:commons-io:${LIB_COMMONS_IO_VER}",
+                    "org.apache.commons:commons-email:${LIB_APACHE_COMMONS_EMAIL_VER}",
+                    "commons-fileupload:commons-fileupload:${LIB_COMMONS_FILEUPLOAD_VER}",
+                    "org.apache.commons:commons-lang3:${LIB_APACHE_COMMONS_LANG3_VER}"
             ],
-            elasticsearch   : [
+            elasticsearch: [
                     'org.elasticsearch.client:transport',
                     'org.elasticsearch.plugin:transport-netty4-client',
-                    'org.elasticsearch:elasticsearch:6.5.4'
+                    'org.elasticsearch:elasticsearch'
             ],
             'third-party': [
-                    "org.projectlombok:lombok:1.18.2",
-                    "asm:asm-util:3.3.1",
-                    "asm:asm-commons:3.3.1",
-                    "cglib:cglib:2.2.2",
-                    "net.sourceforge.htmlcleaner:htmlcleaner:2.8",
-                    "org.apache.httpcomponents:httpmime:4.3.5",
-                    dependencies.create("eu.medsea.mimeutil:mime-util:2.1.3") {
+                    "org.projectlombok:lombok:${LIB_LOMBOK_VER}",
+                    "cglib:cglib:${LIB_CGLIB_VER}",
+                    "net.sourceforge.htmlcleaner:htmlcleaner:${LIB_HTMLCLEANER_VER}",
+                    dependencies.create("eu.medsea.mimeutil:mime-util:${LIB_MIME_UTIL_VER}") {
                         exclude group: "org.slf4j", module: "slf4j-log4j12"
                     },
-                    dependencies.create("ognl:ognl:3.1.2") {
+                    dependencies.create("ognl:ognl:${LIB_OGNL_VER}") {
                         exclude group: "javassist", module: "javassist"
                     },
-                    "org.bouncycastle:bcprov-jdk16:1.46",
-                    "com.github.stuxuhai:jpinyin:1.1.8"
+                    "org.bouncycastle:bcprov-jdk16:${LIB_BCPROV_VER}",
+                    "com.github.stuxuhai:jpinyin:${LIB_JPINYIN_VER}"
             ],
             test         : [
                     "org.springframework.boot:spring-boot-starter-test",
-                    "junit:junit",
-                    "org.codehaus.groovy:groovy-all:${groovy}",
-                    "org.xhtmlrenderer:flying-saucer-pdf-itext5:9.0.8",
+                    "org.codehaus.groovy:groovy-all:${LIB_GROOVY_VER}",
             ]
     ]
 }
