为 GraphQL 添加默认的异常处理机制，并支持 @Validated 注解验证

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,6 +9,9 @@ dependencyManagement {
             exclude 'org.elasticsearch:elasticsearch'
             exclude 'org.apache.logging.log4j:log4j-core'
         }
+        dependency("com.mashape.unirest:unirest-java:${LIB_UNIREST_VER}") {
+            exclude 'org.json:json'
+        }
         dependency("org.elasticsearch.plugin:transport-netty4-client:${LIB_ELASTICSEARCH_VER}") {
             exclude 'org.elasticsearch:elasticsearch'
             exclude 'org.apache.logging.log4j:log4j-core'
