--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -64,15 +64,11 @@ spring:
 
 graphql:
   servlet:
-    websocket:
-      enabled: false
     exception-handlers-enabled: true
-  tools:
-    schema-location-pattern: "**/*.graphqls"
-    introspection-enabled: true
-logging:
-  path: ~/logs
-  config: classpath:logback.xml
 
+logging:
+  config: classpath:logback.xml
+  file:
+    path: ~/logs
 
 
