--- a/build.gradle
+++ b/build.gradle
@@ -4,26 +4,16 @@ buildscript {
         mavenCentral()
         mavenLocal()
     }
-    dependencies {
-        classpath 'io.spring.gradle:dependency-management-plugin:1.0.7.RELEASE'
-        classpath 'io.spring.gradle:propdeps-plugin:0.0.9.RELEASE'
-        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7'
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.+'
-    }
 }
 
 plugins {
-
+    id "org.sonarqube" version "2.8"
+    id "io.spring.dependency-management" version "1.0.8.RELEASE"
+    id "com.jfrog.artifactory" version "4.14.1"
 }
 
 apply from: "$rootDir/gradle/dependencies.gradle"
 apply plugin: "org.sonarqube"
-
-configure(allprojects) {
-    apply plugin: 'propdeps'
-    apply plugin: 'propdeps-maven'
-    apply plugin: 'propdeps-idea'
-}
 
 allprojects {
     apply plugin: 'com.jfrog.artifactory'
@@ -72,10 +62,10 @@ subprojects {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:${LIB_SPRING_BOOT_VER}"
         }
-    }
+        dependencies {
+            dependency "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
+        }
 
-    dependencies {
-        optional "org.springframework.boot:spring-boot-configuration-processor"
     }
 
     test {
