--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,11 @@ sonarqube:
     SONAR_ANALYSIS_MODE: publish
     SONAR_PROJECT_KEY: $CI_PROJECT_NAMESPACE:$CI_PROJECT_NAME
   script:
-    - env
-    - gitlab-sonar-scanner -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME -Dsonar.branch.name=$CI_COMMIT_REF_NAME
+    - gitlab-sonar-scanner \
+      -Dsonar.gitlab.project_id=$CI_PROJECT_ID \
+      -Dsonar.gitlab.commit_sha=$CI_COMMIT_SHA \
+      -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME \
+      -Dsonar.branch.name=$CI_COMMIT_REF_NAME
   only:
     - master
     - develop
