--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,8 @@ build:
 
 sonarqube:
   stage: analysis
+  dependencies:
+    - build
   image: core.harbor.thuni-h.com/limaofeng/gitlab-sonar-scanner
   variables:
     SONAR_ANALYSIS_MODE: publish
