--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ sonarqube:
     SONAR_PROJECT_KEY: $CI_PROJECT_NAMESPACE:$CI_PROJECT_NAME
   script:
     - ./gradlew clean classes -x test
-    - gitlab-sonar-scanner -X
+    - gitlab-sonar-scanner -Dsonar.qualitygate.wait=true
   only:
     - merge_requests
     - master
