--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,9 @@ stages:
   - analysis
   - deploy
 
+variables:
+  GIT_DEPTH: 0
+
 build:
   stage: build
   image: java:8
@@ -25,18 +28,21 @@ build:
 
 sonarqube:
   stage: analysis
-  dependencies:
-    - build
-  image: ciricihq/gitlab-sonar-scanner
+  image: core.harbor.thuni-h.com/limaofeng/gitlab-sonar-scanner
+  cache:
+    paths:
+      - .gradle/caches/
+      - .gradle/wrapper/
   variables:
     SONAR_ANALYSIS_MODE: publish
     SONAR_BRANCH: $CI_COMMIT_REF_NAME
     SONAR_PROJECT_KEY: $CI_PROJECT_NAMESPACE:$CI_PROJECT_NAME
   script:
-    - gitlab-sonar-scanner -X
+    - ./gradlew clean classes -x test
+    - gitlab-sonar-scanner -Dsonar.qualitygate.wait=true
   only:
+    - merge_requests
     - master
-    - develop
   allow_failure: true
 
 deploy:
