--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,14 @@ build:
     - export GRADLE_USER_HOME=$PWD/.gradle
   script:
     - ./gradlew clean classes -x test
+  artifacts:
+    paths:
+      - build
+    expire_in: 7 days
+  only:
+    - merge_requests
+    - branches
+    - tags
 
 sonarqube:
   stage: analysis
