--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,8 @@ build:
 sonarqube:
   stage: analysis
   image: core.harbor.thuni-h.com/limaofeng/gitlab-sonar-scanner
+  dependencies:
+    - build
   cache:
     paths:
       - .gradle/caches/
@@ -37,7 +39,6 @@ sonarqube:
     SONAR_BRANCH: $CI_COMMIT_REF_NAME
     SONAR_PROJECT_KEY: $CI_PROJECT_NAMESPACE:$CI_PROJECT_NAME
   script:
-    - ./gradlew clean classes -x test
     - gitlab-sonar-scanner -Dsonar.qualitygate.wait=true
   only:
     - merge_requests
