--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ sonarqube:
     SONAR_BRANCH: $CI_COMMIT_REF_NAME
     SONAR_PROJECT_KEY: ${$CI_PROJECT_NAMESPACE}:$CI_PROJECT_NAME
   script:
-    - gitlab-sonar-scanner -Dsonar.qualitygate.wait=true
+    - gitlab-sonar-scanner -Dsonar.qualitygate.wait=true -X
   only:
     - merge_requests
     - master
