--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.sources=.
 sonar.inclusions=**/src/**/*.java
-sonar.exclusions=example/**/*
+sonar.exclusions=example/**/*, **/src/test/**/*
 sonar.java.binaries=**/build
