--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ variables:
 
 build:
   stage: build
-  image: java:8
+  image: core.harbor.thuni-h.com/library/java:8
   cache:
     paths:
       - .gradle/caches/
@@ -36,13 +36,7 @@ sonarqube:
     paths:
       - .gradle/caches/
       - .gradle/wrapper/
-  variables:
-    GIT_DEPTH: 0
-    SONAR_ANALYSIS_MODE: publish
-    SONAR_BRANCH: $CI_COMMIT_REF_NAME
-    SONAR_PROJECT_KEY: $CI_PROJECT_NAMESPACE:$CI_PROJECT_NAME
   script:
-    - ./gradlew clean classes -x test
     - gitlab-sonar-scanner -Dsonar.qualitygate.wait=true
   only:
     - merge_requests
@@ -51,7 +45,7 @@ sonarqube:
 
 deploy:
   stage: deploy
-  image: java:8
+  image: core.harbor.thuni-h.com/library/java:8
   cache:
     paths:
       - .gradle/caches/
